@@ -38,10 +38,14 @@ import com.suse.manager.webui.services.iface.SaltApi;
 import com.suse.manager.webui.services.impl.SaltSSHService;
 import com.suse.manager.webui.services.impl.runner.MgrUtilRunner;
 
+import org.apache.commons.lang3.RandomStringUtils;
+
+import java.security.SecureRandom;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * Acquires and validates all necessary data for the Proxy container configuration creation files.
@@ -152,7 +156,10 @@ public class ProxyContainerConfigCreateAcquisitor implements ProxyContainerConfi
             // Add the FQDNs as some may not be already known
             server.getFqdns().addAll(fqdns.stream()
                     .filter(fqdn -> !fqdn.contains("*"))
-                    .map(fqdn -> new ServerFQDN(server, fqdn)).toList());
+                    .map(fqdn -> new ServerFQDN(server, fqdn)).collect(Collectors.toList()));
+
+            systemEntitlementManager.addEntitlementToServer(server, EntitlementManager.PROXY);
+
             return server;
         }
         Server server = ServerFactory.createServer();
@@ -160,9 +167,21 @@ public class ProxyContainerConfigCreateAcquisitor implements ProxyContainerConfi
         server.setHostname(proxyName);
         server.getFqdns().addAll(fqdns.stream()
                 .filter(fqdn -> !fqdn.contains("*"))
-                .map(fqdn -> new ServerFQDN(server, fqdn)).toList());
+                .map(fqdn -> new ServerFQDN(server, fqdn)).collect(Collectors.toList()));
         server.setOrg(creator.getOrg());
-        ServerFactory.buildServerInfo(creator, proxyName, server);
+        server.setCreator(creator);
+
+        String uniqueId = SystemManagerUtils.createUniqueId(List.of(proxyName));
+        server.setDigitalServerId(uniqueId);
+        server.setMachineId(uniqueId);
+        server.setOs("(unknown)");
+        server.setRelease("(unknown)");
+        server.setSecret(RandomStringUtils.random(64, 0, 0, true, true,
+                null, new SecureRandom()));
+        server.setAutoUpdate("N");
+        server.setContactMethod(ServerFactory.findContactMethodByLabel("default"));
+        server.setLastBoot(System.currentTimeMillis() / 1000);
+        server.setServerArch(ServerFactory.lookupServerArchByLabel("x86_64-redhat-linux"));
         server.updateServerInfo();
         ServerFactory.save(server);
 
@@ -175,6 +194,7 @@ public class ProxyContainerConfigCreateAcquisitor implements ProxyContainerConfi
         // No need to call `updateSystemOverview`
         // It will be called inside the method setBaseEntitlement. If we remove this line we need to manually call it
         systemEntitlementManager.setBaseEntitlement(server, EntitlementManager.FOREIGN);
+        systemEntitlementManager.addEntitlementToServer(server, EntitlementManager.PROXY);
         return server;
     }
 
@@ -188,7 +208,7 @@ public class ProxyContainerConfigCreateAcquisitor implements ProxyContainerConfi
     private String getServerSshPublicKey(User user, String serverFqdn) {
         String localManagerFqdn = Config.get().getString(ConfigDefaults.SERVER_HOSTNAME);
         if (isAbsent(localManagerFqdn)) {
-            raiseAndLog(this, "Could not determine the local SUSE Manager FQDN.").get();
+            raiseAndLog(this, "Could not determine the local SUSE Multi-Linux Manager FQDN.").get();
         }
 
         if (localManagerFqdn.equals(serverFqdn)) {
